* unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.8
    - Changed SIR to single instance application
    - Improved saving "Exif.Image.Orientation" metadata tag
    - Removed setting empty dcraw path string after browse cancel
    - Fixed left arrow shortcut for previous image in PreviewDialog
    - Fixed no files with lowercase extension in "Add File" dialog
    - Removed defines.h file

* Sun Aug 24 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.3
    - Changed all occurrences of old SIR webpage URL
    - Windows: fixed button icons
    - Disabled drag & drop URL checking for Qt 4.7 support

* Sat May 31 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.2
    - Polish translation improved
    - Spanish translation updated (thanks Garbage Collector)
    - fixed language autosetting
    - Windows: fixed Drag & Drop
    - Windows: improved icon

* Thu Apr 17 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.1
    - fixed translating of Gradient Effect widgets
    - fixed initialization of Gradient Effect
    - patched finding icon theme in Qt5 (Tango, oxygen and gnome themes are supported)

* Fri Feb 28 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7
    - added filter effect
    - added disabling SVG tab if no SVG file loaded on file tree view and the view is not empty
    - added Version class
    - added effects storage in XML files
    - added histogram stretching and equalization effects
    - added clearing file list before session restoring
    - added initializing session and effects directory based restored session from command line
    - improved loading files contains incomplete/broken metadata
    - CMake: build using choosed Qt version (4/5)
    - code update for Qt 5 compatibility
    - bugfix: painting effect when desired size typed in Bytes now
    - String class moved from MetadataUtils namespace to sir namespace
    - Polish translation updated

* Sun Apr 28 2013 - Marek Jędryka <jedryka89@gmail.com> - v2.6