@@ -1,7 +1,6 @@
 *** nearest release ***
   ! add Delete key shortcut for remove selected files from the files TreeWidget
   ! CammelCase file naming
-  ! remove src/translations/googlecode_upload.py file
   ! automate upload PHP script for check updates option
   ! improve view in DetailBrowser for photos made by HTC Desire S
     * Aperture: F-1.0
