@@ -2,4 +2,4 @@ To install a new language:
 
 - Add the line in the translation_info.txt file: qm_file,Language_Name,flag_image
 - Add the ts file to sir_TRANSLATIONS variable in CMakeLists.txt
-- Run lupdate ../src/ ../dialogs/ -ts sir_[lang].ts
+- Run make lupdate
